# ESKF_toy

./: CMakeLists.txt  README.md
evaluation/: associate.py  evaluate_ate.py
evaluation/result/: out_traj.txt  ref_traj.txt
include/: ESKF.h  common_define.h  common_utils.h  dataParser.h
src/: ESKF.cpp  common_utils.cpp  dataParser.cpp  main.cpp
